--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -72,7 +72,8 @@ jobs:
       - name: Output contents
         run: ls
       - name: Deploy
-        run: echo "Deploying..."
+        uses: ./.github/actions/resuable-workflow
+
 
   dummy:
     needs: build
