--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -63,7 +63,16 @@ jobs:
           path: dist
   deploy:
     needs: build
-    uses: ./.github/workflows/resuable_worklow.yml
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: dist-files
+      - name: Output contents
+        run: ls
+      - name: Deploy
+        uses: ./.github/workflows/resuable_worklow.yml
 
 
   dummy:
