--- a/.github/workflows/resuable_worklow.yml
+++ b/.github/workflows/resuable_worklow.yml
@@ -1,8 +1,20 @@
 name: resuable
-on: workflow_call
+on:
+  workflow_call:
+    inputs:
+      artifacts-download:
+        description: 'Artifacts to download'
+        required: true
+        default: 'dist'
+        type: string
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: ${{ github.event.inputs.artifacts-download }}
       - name: Echo Something
         run: echo "Hello from reusable workflow"
