--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -66,7 +66,8 @@ jobs:
     uses: ./.github/workflows/resuable.yml
     with:
       artifacts-download: dist-files
-
+    secrets:
+      GITHUB_TOKEN: ${{ secrets.MY_TEST_VALUE }}
 
   dummy:
     needs: build
@@ -74,4 +75,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Output contents
-        run: "echo this will only run on Failure"
+        run: 'echo this will only run on Failure'
