exampled added input resuable

--- a/.github/workflows/resuable.yml
+++ b/.github/workflows/resuable.yml
@@ -9,8 +9,8 @@ on:
         type: string
     secrets:
       MY-PRECIOUS:
-        description: 'GitHub Token'
-        required: false
+        description: 'some dummy secret'
+        required: true
 
 jobs:
   build:
